# bartseq-pipeline

./: .gitignore  BartSeq Snakemake.odp  Environment.yml  NGS-15 Analysis Required Information.xlsx  README.md  README.rst  Snakefile  Snakefile-example-config.json  library info.rst  pyproject.toml  test.sh  tox.ini
bartseq/: __init__.py  __main__.py  cli.py  cli_helpers.py  heatmaps.py  io.py  logging.py  main.py  read_tagger.py
bartseq/counter/: __init__.py  cli.py  main.py
bartseq/fastq_browser/: cli.py  main.py
bartseq/read_tagger/: __init__.py  __main__.py  cli.py  defaults.py  dna.py  io.py  main.py
tests/: test_dna.py  test_read_tagger.py
